--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,36 +8,50 @@
     tools:context="com.example.chm.ofosql.MainActivity">
 
     <LinearLayout
-        android:id="@+id/tab"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:orientation="horizontal">
+        android:id="@+id/ll"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true">
 
-        <EditText
-            android:id="@+id/ed_id"
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
-            android:layout_weight="9" />
-
-        <Button
-            android:id="@+id/query"
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="搜索" />
+            android:text="车牌号"
+            android:textSize="20sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:text="密码"
+            android:textSize="20sp" />
     </LinearLayout>
 
-        <ListView
-            android:id="@+id/myrecyclerview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scrollbars="vertical"
-            android:layout_below   ="@id/tab"
-            />
+    <ListView
+        android:id="@+id/myrecyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/ll"
+        android:scrollbars="vertical" />
+
+
     <Button
         android:id="@+id/add"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_alignParentBottom="true"
-        android:text="添加一辆车" />
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="15dp"
+        android:layout_marginRight="15dp"
+        android:background="@drawable/add" />
+
+    <TextView
+        android:id="@+id/query"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_above="@+id/add"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="15dp"
+        android:layout_marginRight="15dp"
+        android:background="@drawable/ss" />
 </RelativeLayout>
