--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,47 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/lightgrey"
-    android:orientation="vertical"
-
-    >
-
+    android:background="@drawable/bak"
+    android:orientation="vertical">
     <LinearLayout
-        android:layout_width="match_parent"
+        android:id="@+id/mLinearLayout"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp">
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="车牌号:"
-            android:textSize="20sp" />
+        >
 
         <TextView
             android:id="@+id/ofoid"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="50dp"
             android:text="123456"
             android:textSize="20sp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text=" 密  码 :"
-            android:textSize="20sp" />
-
         <TextView
             android:id="@+id/pwd"
             android:layout_width="wrap_content"
@@ -49,5 +26,6 @@
             android:layout_marginLeft="50dp"
             android:text="0000"
             android:textSize="20sp" />
+
     </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
